--- a/paper/A-value creation derivation.Rmd
+++ b/paper/A-value creation derivation.Rmd
@@ -1,4 +1,20 @@
-# Complete Algebreic Derivation of Value Creation Equation
+# Complete Algebreic Derivation of Value Creation Equations
+
+## Capital Deployment Value Creation Equation
+\begin{align}
+\nonumber E[R^I] &> E[R^0] \\
+\nonumber r_c \times (C - P^{I}) - P^{I} &> r_c \times C_{w}^{I} + r_f \times C_{x}^{0} \\
+\nonumber r_c \times C - r_c \times P^{I} - P^{I} &>  r_c \times C_{w}^{I} + r_f \times C_{x}^{0}\\
+\nonumber -P^{I} \times (1 + r_c) &> r_c \times C_{w}^{I} + r_f \times C_{x}^{0} - r_c \times C\\
+\nonumber -P^{I} \times (1 + r_c) &> r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}\\
+\nonumber -P^{I}  &> \dfrac{r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> \dfrac{r_c \times (C_{w}^{I} - C) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> \dfrac{r_c \times (-C_{x}^{0}) + r_f \times C_{x}^{0}}{1 + r_c}\\
+\nonumber -P^{I} &> C_{x}^{0} \times \dfrac{r_f - r_c}{1 + r_c}\\
+P^{I} &< C_{x}^{0} \times \dfrac{r_c - r_f}{1 + r_c} \label{eqn:cap-deploy}
+\end{align}
+
+## Complete Value Creation Equation
 
 \begin{align}
 \nonumber \text{Sharpe Ratio}^I &> \text{Sharpe Ratio}^0\\
